web/intro-styles.css
* {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
}

.hero {
  position: relative;
  background-image: url('./assets/hero_background.png');
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}
.hero .inner {
  position: relative;
  max-width: 480px;
  margin: 0 auto;
  padding: 160px 0;
  text-align: center;
}
.hero .highlight {
  font-size: 80px;
  line-height: 120px;
  font-weight: 400;
  letter-spacing: 2px;
}
.hero .text-lead {
  font-size: 18px;
  line-height: 28px;
}
.hero .highlight,
.hero .text-lead {
  text-align: center;
  color: #000000;
}
.hero .guided {
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: center;
}
.guided .nav-item {
  color: #212121;
  margin-right: 30px;
  text-decoration: none;
  border: 1px solid #212121;
  line-height: 32px;
  border-radius: 16px;
  padding: 0 16px;
  font-size: 14px;
  font-weight: 500;
}
.guided .nav-item:hover{
  background-color: #F2F2F2;
}
.feature-tiles {
  position: relative;
  padding: 64px 0;
}
.feature-tiles .inner {
  position: relative;
  max-width: 960px;
  margin: 0 auto;
}
.feature-tiles h5 {
  color: #415C7A;
}
.evolve {
  position: relative;
  padding: 80px 0;
  background-color: #F1F4F7;
}
.evolve .inner {
  max-width: 960px;
  margin: 0 auto;
}
.evolve .evolving {
  font-size: 56px;
  line-height: 72px;
  font-weight: 600;
  color: #415C7A;
}
.x-pro {
  position: relative;
  padding-top: 32px;
  padding-bottom: 32px;
}
.x-pro-left {
  background-color: #EAF5FF;
}
.x-pro-right {
  background-color: #FFF4E8;
}
.x-pro .inner {
  width: 100%;
  max-width: 450px;
}
.x-pro-left .inner {
  float: right;
  padding: 0 30px;
}
.x-pro-right .inner {
  float: left;
  padding: 0 30px;
}
.footer {
  position: relative;
}
.footer .inner {
  max-width: 960px;
  margin: 0 auto;
  padding: 32px 0;
}

@media only screen and (max-width: 1024px) {
  .x-pro-left .inner {
    float: left;
  }
}
@media only screen and (max-width: 1024px) {
  .feature-tiles, .evolve {
    padding-left: 64px;
    padding-right: 64px;
  }
}

